# teamtalk

./: README.md
android/: .gitignore  build.gradle
android/app/: CMakeLists.txt  build.gradle
android/mgimlibs/: build.gradle
server/: .gitignore  CMakeLists.txt  README.md
server/src/base/: BaseSocket.cpp  CMakeLists.txt  ConfigFileReader.cpp  EventDispatch.cpp  HttpClient.cpp  ImPduBase.cpp  ImPduBase.h  ThreadPool.cpp  imconn.cpp  ostype.h  util.h
server/src/db_proxy_server/: CMakeLists.txt  CachePool.cpp  DBPool.cpp  ProxyConn.cpp  SyncCenter.cpp  db_proxy_server.cpp
server/src/file_server/: file_client_conn.cpp  file_msg_server_conn.cpp  file_server.cpp  file_server_util.h  transfer_task.cpp  transfer_task.h  transfer_task_manager.cpp
server/src/http_msg_server/: CMakeLists.txt  DBServConn.cpp  HttpConn.cpp  HttpQuery.cpp  RouteServConn.cpp  http_msg_server.cpp
server/src/libsecurity/src/: CMakeLists.txt
server/src/login_server/: CMakeLists.txt  HttpConn.cpp  HttpConn.h  LoginConn.cpp  login_server.cpp
server/src/msfs/: CMakeLists.txt  FileManager.cpp  HttpConn.cpp  main.cpp
server/src/msg_server/: CMakeLists.txt  DBServConn.cpp  FileHandler.cpp  FileServConn.cpp  GroupChat.cpp  ImUser.cpp  LoginServConn.cpp  MsgConn.cpp  PushServConn.cpp  RouteServConn.cpp  msg_server.cpp
server/src/push_server/: CMakeLists.txt  ConfigFileReader.cpp  apns_msg.cpp  session_manager.h
server/src/route_server/: CMakeLists.txt  RouteConn.cpp  route_server.cpp
server/src/test/: ClientConn.cpp
win-client/: .gitignore
win-client/solution/: teamtalk.sln
(+33 files in other folders)
