cmake_minimum_required(VERSION 2.6)
PROJECT(security)
AUX_SOURCE_DIRECTORY(. SRC_LIST)
SET(CMAKE_MACOSX_RPATH 1)
SET(LIBRARY_OUTPUT_PATH .)

ADD_LIBRARY(security ${SRC_LIST})
target_include_directories(security PRIVATE ../include)
target_compile_definitions(security PRIVATE -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
  -DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
  -DAC_HAS_DEBUG -DLINUX_DAEMON -DSERVER)
